--- a/inst/pages/90_acknowledgments.qmd
+++ b/inst/pages/90_acknowledgments.qmd
@@ -84,6 +84,8 @@ key authors/contributors include:
 
 - *Lu Yang* 
 
+- *Katariina Pärnänen*
+
 - *Jacques Serizay* converted the _OMA_ book to the `BiocBook` format. This 
 allows the _OMA_ book to be built and distributed by Bioconductor. 
 
