--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -271,7 +271,7 @@ colnames(tse)
 3.  List the information on samples available in colData with `names`.
 
 ```{r}
-#| label: sample-information-ex3
+#| label: sample-information-ex_3
 #| eval: FALSE
 #| code-fold: true
 #| code-summary: "Show solution"
@@ -283,7 +283,7 @@ names(colData(tse))
     information stored in the different columns.
 
 ```{r}
-#| label: sample-information-ex4
+#| label: sample-information-ex_4
 #| eval: FALSE
 #| code-fold: true
 #| code-summary: "Show solution"
